--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ nav ul li {
   margin-right: 10px;
 }
 
-nav a {
+nav a{
   text-decoration: none;
   color: #007bff;
   font-size: 18px;
@@ -62,4 +62,9 @@ footer{
   margin-top: 80px;
   padding-top: 20px;
   color: #CCC;
+}
+
+nav a:hover {
+  text-decoration: underline;
+  color: #0056b3;
 }
