--- a/style.css
+++ b/style.css
@@ -72,3 +72,12 @@ nav a:hover {
 #header a:hover{
   text-decoration: underline;
 }
+
+div.questions {
+  padding: 0 20px 0 20px;
+}
+
+div.questions h4{
+  font-size:30px;
+  margin-bottom: 10px;
+}
